# ec2-search

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/script/: prs.js
.github/workflows/: note.yml  release.yml  test.yml
src/: autoscaling.rs  awsutils.rs  instance.rs  lib.rs  main.rs  targetgroup.rs  utils.rs
