[package]
name = "ec2-search"
version = "0.7.0"
authors = ["Yuto Suzuki <yuutoo.advance@gmail.com>"]
edition = "2018"
repository = "https://github.com/mocyuto/ec2-search"
categories = ["command-line-utilities"]
keywords = ["ec2","aws","cli"]
license = "Apache-2.0"
readme = "./README.md"
description = "search AWS ec2 easily"

[[bin]]
name = "ec2s"
path = "src/main.rs"


[dependencies]
rusoto_core = "0.45.0"
rusoto_ec2 = "0.45.0"
rusoto_elbv2= "0.45.0"
rusoto_autoscaling = "0.45.0"
tokio = { version = "0.2", features = ["macros"] }
structopt = "0.3"
roxmltree = "0.13.0"
cli-table = "0.3"
regex = "1"
lazy_static = "1.4"
