[package]
name = "ec2-search"
version = "0.13.0"
authors = ["Yuto Suzuki <yuutoo.advance@gmail.com>"]
edition = "2018"
repository = "https://github.com/mocyuto/ec2-search"
categories = ["command-line-utilities"]
keywords = ["ec2","aws","cli"]
license = "Apache-2.0"
readme = "./README.md"
description = "search AWS ec2 easily. named ec2s"

[[bin]]
name = "ec2s"
path = "src/main.rs"


[dependencies]
aws-config = "0.3"
aws-sdk-autoscaling = "0.3"
aws-smithy-types = "0.33.1"
rusoto_core = "0.47.0"
rusoto_ec2 = "0.47.0"
rusoto_elbv2= "0.47.0"
rusoto_autoscaling = "0.47.0"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
roxmltree = "0.13.0"
cli-table = "0.4"
regex = "1"
lazy_static = "1.4"
itertools = "0.10.1"
