[package]
name = "ec2-search"
version = "0.14.0"
authors = ["Yuto Suzuki <yuutoo.advance@gmail.com>"]
edition = "2021"
repository = "https://github.com/mocyuto/ec2-search"
categories = ["command-line-utilities"]
keywords = ["ec2","aws","cli"]
license = "Apache-2.0"
readme = "./README.md"
description = "search AWS ec2 easily. named ec2s"

[[bin]]
name = "ec2s"
path = "src/main.rs"


[dependencies]
aws-config = "0.3"
aws-sdk-autoscaling = "0.3"
aws-smithy-types = "0.33"
aws-types = "0.3"
aws-sdk-ec2 = "0.3"
aws-sdk-elasticloadbalancingv2 = "0.8"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
roxmltree = "0.14.1"
cli-table = "0.4"
regex = "1"
itertools = "0.10.3"
once_cell = "1.10.0"
